@@ -2,6 +2,10 @@ Revision history for Perl module Math::Prime::Util::GMP
 
 0.42 2016-?
 
+    [ADDED]
+
+    - lambertw(x[,digits])         Lambert W function
+
     [FIXES]
 
     - is_power behaviour for 1 and -1.
